--- a/jbase.site/pom.xml
+++ b/jbase.site/pom.xml
@@ -1,138 +1,212 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<relativePath>../jbase.parent/pom.xml</relativePath>
-		<groupId>net.sf.xtext-jbase</groupId>
-		<artifactId>jbase.parent</artifactId>
-		<version>0.9.0-SNAPSHOT</version>
-	</parent>
+  <parent>
+    <relativePath>../jbase.parent/pom.xml</relativePath>
+    <groupId>net.sf.xtext-jbase</groupId>
+    <artifactId>jbase.parent</artifactId>
+    <version>0.9.0-SNAPSHOT</version>
+  </parent>
 
-	<artifactId>jbase.site</artifactId>
-	<packaging>eclipse-repository</packaging>
+  <artifactId>jbase.site</artifactId>
+  <packaging>eclipse-repository</packaging>
 
-	<profiles>
-		<profile>
-			<!-- Activate this profile to perform the release to Bintray -->
-			<id>release-composite</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
+  <profiles>
+    <profile>
+      <!-- Activate this profile to perform the release to Bintray -->
+      <id>release-composite</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
 
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.eclipse.tycho</groupId>
-						<artifactId>tycho-p2-repository-plugin</artifactId>
-						<version>${tycho-version}</version>
-						<configuration>
-							<includeAllDependencies>${includeAllDependencies}</includeAllDependencies>
-							<finalName>${project.artifactId}-${qualifiedVersion}</finalName>
-						</configuration>
-					</plugin>
-
-					<plugin>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>${maven-antrun-plugin.version}</version>
-						<executions>
-							<execution>
-								<!-- Retrieve possibly existing remote composite metadata -->
-								<id>update-local-repository</id>
-								<phase>prepare-package</phase>
-								<configuration>
-									<target>
-										<ant antfile="${ant-files-path}/bintray.ant" target="get-composite-metadata">
-										</ant>
-									</target>
-								</configuration>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-							
-							<execution>
-								<!-- Deploy p2 repository, p2 composite updated metadata and zipped p2 repository -->
-								<id>deploy-repository</id>
-								<phase>verify</phase>
-								<configuration>
-									<target>
-										<ant antfile="${ant-files-path}/bintray.ant" target="push-to-bintray">
-										</ant>
-									</target>
-								</configuration>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.eclipse.tycho.extras</groupId>
-						<artifactId>tycho-eclipserun-plugin</artifactId>
-						<version>${tycho-version}</version>
-						<configuration>
-							<applicationsArgs>
-								<args>-application</args>
-								<args>org.eclipse.ant.core.antRunner</args>
-								<args>-buildfile</args>
-								<args>${ant-files-path}/packaging-p2composite.ant</args>
-								<args>p2.composite.add</args>
-								<args>-Dsite.label="${site.label}"</args>
-								<args>-Dcomposite.base.dir=${project.build.directory}</args>
-								<args>-DunqualifiedVersion=${unqualifiedVersion}</args>
-								<args>-DbuildQualifier=${buildQualifier}</args>
-								<args>-Dchild.repository.path.prefix="${child.repository.path.prefix}"</args>
-							</applicationsArgs>
-							<repositories>
-								<repository>
-									<id>mars</id>
-									<layout>p2</layout>
-									<url>http://download.eclipse.org/releases/oxygen</url>
-								</repository>
-							</repositories>
-							<dependencies>
-								<dependency>
-									<artifactId>org.eclipse.ant.core</artifactId>
-									<type>eclipse-plugin</type>
-								</dependency>
-								<dependency>
-									<artifactId>org.apache.ant</artifactId>
-									<type>eclipse-plugin</type>
-								</dependency>
-								<dependency>
-									<artifactId>org.eclipse.equinox.p2.repository.tools</artifactId>
-									<type>eclipse-plugin</type>
-								</dependency>
-								<dependency>
-									<artifactId>org.eclipse.equinox.p2.core.feature</artifactId>
-									<type>eclipse-feature</type>
-								</dependency>
-								<dependency>
-									<artifactId>org.eclipse.equinox.p2.extras.feature</artifactId>
-									<type>eclipse-feature</type>
-								</dependency>
-								<dependency>
-									<artifactId>org.eclipse.equinox.ds</artifactId>
-									<type>eclipse-plugin</type>
-								</dependency>
-							</dependencies>
-						</configuration>
-						<executions>
-							<execution>
-								<id>add-p2-composite-repository</id>
-								<phase>package</phase>
-								<goals>
-									<goal>eclipse-run</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.eclipse.tycho</groupId>
+            <artifactId>tycho-p2-repository-plugin</artifactId>
+            <version>${tycho-version}</version>
+            <configuration>
+              <includeAllDependencies>${includeAllDependencies}</includeAllDependencies>
+              <finalName>${project.artifactId}-${qualifiedVersion}</finalName>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+              <!-- sets the following properties that we use in our Ant scripts
+                parsedVersion.majorVersion
+                parsedVersion.minorVersion
+                bound by default to the validate phase
+              -->
+              <execution>
+                <id>parse-version</id>
+                <goals>
+                  <goal>parse-version</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <configuration>
+              <executable>git</executable>
+            </configuration>
+            <executions>
+              <execution>
+                <id>git-clone</id>
+                <phase>prepare-package</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <arguments>
+                    <argument>clone</argument>
+                    <argument>--depth=1</argument>
+                    <argument>-b</argument>
+                    <argument>master</argument>
+                    <argument>${github-update-repo}</argument>
+                    <argument>${github-local-clone}</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+              <execution>
+                <id>git-add</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <arguments>
+                    <argument>-C</argument>
+                    <argument>${github-local-clone}</argument>
+                    <argument>add</argument>
+                    <argument>-A</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+              <execution>
+                <id>git-commit</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <arguments>
+                    <argument>-C</argument>
+                    <argument>${github-local-clone}</argument>
+                    <argument>commit</argument>
+                    <argument>-m</argument>
+                    <argument>Release ${qualifiedVersion}</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+              <execution>
+                <id>git-push</id>
+                <phase>deploy</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <arguments>
+                    <argument>-C</argument>
+                    <argument>${github-local-clone}</argument>
+                    <argument>push</argument>
+                    <argument>origin</argument>
+                    <argument>master</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>copy-repository</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>copy-resources</goal>
+                </goals>
+                <configuration>
+                  <outputDirectory>${current-release-directory}</outputDirectory>
+                  <resources>
+                    <resource>
+                      <directory>${project.build.directory}/repository</directory>
+                    </resource>
+                  </resources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.eclipse.tycho.extras</groupId>
+            <artifactId>tycho-eclipserun-plugin</artifactId>
+            <configuration>
+              <applicationsArgs>
+                <args>-application</args>
+                <args>org.eclipse.ant.core.antRunner</args>
+                <args>-buildfile</args>
+                <args>${ant-files-path}/packaging-p2composite.ant</args>
+                <args>p2.composite.add</args>
+                <args>-Dsite.label="${site.label}"</args>
+                <args>-Dcomposite.base.dir=${github-local-clone}</args>
+                <args>-DunqualifiedVersion=${unqualifiedVersion}</args>
+                <args>-DbuildQualifier=${buildQualifier}</args>
+                <args>-DparsedVersion.majorVersion=${parsedVersion.majorVersion}</args>
+                <args>-DparsedVersion.minorVersion=${parsedVersion.minorVersion}</args>
+              </applicationsArgs>
+              <repositories>
+                <repository>
+                  <id>oxygen</id>
+                  <layout>p2</layout>
+                  <url>http://download.eclipse.org/releases/oxygen</url>
+                </repository>
+              </repositories>
+              <dependencies>
+                <dependency>
+                  <artifactId>org.eclipse.ant.core</artifactId>
+                  <type>eclipse-plugin</type>
+                </dependency>
+                <dependency>
+                  <artifactId>org.apache.ant</artifactId>
+                  <type>eclipse-plugin</type>
+                </dependency>
+                <dependency>
+                  <artifactId>org.eclipse.equinox.p2.repository.tools</artifactId>
+                  <type>eclipse-plugin</type>
+                </dependency>
+                <dependency>
+                  <artifactId>org.eclipse.equinox.p2.core.feature</artifactId>
+                  <type>eclipse-feature</type>
+                </dependency>
+                <dependency>
+                  <artifactId>org.eclipse.equinox.p2.extras.feature</artifactId>
+                  <type>eclipse-feature</type>
+                </dependency>
+                <dependency>
+                  <artifactId>org.eclipse.equinox.ds</artifactId>
+                  <type>eclipse-plugin</type>
+                </dependency>
+              </dependencies>
+            </configuration>
+            <executions>
+              <execution>
+                <id>add-p2-composite-repository</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>eclipse-run</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
