--- a/jbase.example.client.maven/.settings/org.eclipse.core.resources.prefs
+++ b/jbase.example.client.maven/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
 eclipse.preferences.version=1
+encoding//src/main/generated-sources/jbasescript=UTF-8
+encoding//src/main/generated-sources/xtend=UTF-8
 encoding//src/main/java=UTF-8
+encoding//src/test/generated-sources/xtend=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
