--- a/jbase.example.client.maven/.settings/org.eclipse.xtend.core.Xtend.prefs
+++ b/jbase.example.client.maven/.settings/org.eclipse.xtend.core.Xtend.prefs
@@ -1,6 +1,9 @@
 //outlet.DEFAULT_OUTPUT.sourceFolder.src/main/generated-sources.directory=src/main/generated-sources/xtend
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/main/generated-sources/jbasescript.directory=src/main/generated-sources/xtend
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/main/generated-sources/xtend.directory=src/main/generated-sources/xtend
 //outlet.DEFAULT_OUTPUT.sourceFolder.src/main/java.directory=src/main/generated-sources/xtend
 //outlet.DEFAULT_OUTPUT.sourceFolder.src/test/generated-sources.directory=src/main/generated-sources/xtend
+//outlet.DEFAULT_OUTPUT.sourceFolder.src/test/generated-sources/xtend.directory=src/test/generated-sources/xtend
 //outlet.DEFAULT_OUTPUT.sourceFolder.src/test/java.directory=src/test/generated-sources/xtend
 BuilderConfiguration.is_project_specific=true
 eclipse.preferences.version=1
