100: Store generated-sources
Task-Url: https://github.com/LorenzoBettini/jbase/issues/100

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ logs.zip
 *.orig
 *.java._trace
 *.smap
+*.xtendbin
 
 # we handle separately in the projects
 # src-gen/
@@ -16,4 +17,4 @@ buildroot
 
 target
 #generated
-generated-sources
+#generated-sources
