--- a/jbase.example.client.maven/pom.xml
+++ b/jbase.example.client.maven/pom.xml
@@ -131,6 +131,22 @@
             <artifactId>jbase</artifactId>
             <version>${project.version}</version>
           </dependency>
+          <!-- See https://github.com/eclipse/xtext-xtend/issues/493 -->
+          <dependency>
+            <groupId>org.eclipse.jdt</groupId>
+            <artifactId>org.eclipse.jdt.core</artifactId>
+            <version>3.15.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.jdt</groupId>
+            <artifactId>org.eclipse.jdt.compiler.apt</artifactId>
+            <version>1.3.300</version>
+          </dependency>
+          <dependency>
+            <groupId>org.eclipse.jdt</groupId>
+            <artifactId>org.eclipse.jdt.compiler.tool</artifactId>
+            <version>1.2.300</version>
+          </dependency>
         </dependencies>
       </plugin>
     </plugins>
