98: removed non-existing parent category
Task-Url: https://github.com/LorenzoBettini/jbase/issues/98

--- a/jbase.ui.examples/plugin.xml
+++ b/jbase.ui.examples/plugin.xml
@@ -8,8 +8,7 @@
 	</extension>
 	<extension point="org.eclipse.ui.newWizards">
 		<category id="jbase.project.Examples" 
-				  name="Examples" 
-				  parentCategory="jbase.ui.category" />
+				  name="Examples" />
 	</extension>
 
 	<extension point="org.eclipse.ui.newWizards">
