--- a/jbase.ui/plugin.xml
+++ b/jbase.ui/plugin.xml
@@ -581,4 +581,10 @@
 			type="text">
 		</fileTypes>
 	</extension>
+	<extension point="org.eclipse.ui.newWizards">
+		<category
+			id="jbase.ui.category"
+			name="Jbase">
+		</category>
+	</extension>
 </plugin>
