Revert "98: removed non-existing parent category"
This reverts commit dd55aed9ce7127952fefc684705c56d71ab3b562.

--- a/jbase.ui.examples/plugin.xml
+++ b/jbase.ui.examples/plugin.xml
@@ -8,7 +8,8 @@
 	</extension>
 	<extension point="org.eclipse.ui.newWizards">
 		<category id="jbase.project.Examples" 
-				  name="Examples" />
+				  name="Examples" 
+				  parentCategory="jbase.ui.category" />
 	</extension>
 
 	<extension point="org.eclipse.ui.newWizards">
