--- a/jbase.example.purejbase.ide/pom.xml
+++ b/jbase.example.purejbase.ide/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -11,7 +12,7 @@
     <version>0.9.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>jbase.example.purejbase.ui</artifactId>
+  <artifactId>jbase.example.purejbase.ide</artifactId>
   <packaging>eclipse-plugin</packaging>
 
 </project>
