104: Updated Domainmodel example
Task-Url: https://github.com/LorenzoBettini/jbase/issues/104

--- a/domainmodel/org.eclipse.xtext.example.domainmodel.tests/pom.xml
+++ b/domainmodel/org.eclipse.xtext.example.domainmodel.tests/pom.xml
@@ -14,20 +14,6 @@
 	<artifactId>org.eclipse.xtext.example.domainmodel.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
 
-	<profiles>
-		<profile>
-			<id>macosx-jvm-flags</id>
-			<activation>
-				<os>
-					<family>mac</family>
-				</os>
-			</activation>
-			<properties>
-				<os-jvm-flags>-XstartOnFirstThread</os-jvm-flags>
-			</properties>
-		</profile>
-	</profiles>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -45,13 +31,8 @@
 						<phase>integration-test</phase>
 						<configuration>
 							<skip>${swtbot.tests.only}</skip>
-							<useUIHarness>true</useUIHarness>
-							<useUIThread>true</useUIThread>
-							<!-- tycho.testArgLine repeated to re-use the configuration for argLine for jacoco agent -->
-							<argLine>${moduleProperties} ${memoryArgs} ${os-jvm-flags} -DbuildingWithTycho=true</argLine>
-							<includes>
-								<include>**/tests/*Test*.java</include>
-							</includes>
+							<useUIHarness>false</useUIHarness>
+							<useUIThread>false</useUIThread>
 						</configuration>
 						<goals>
 							<goal>test</goal>
@@ -59,30 +40,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<configuration>
-					<dependency-resolution>
-						<extraRequirements>
-							<!-- to get the org.eclipse.osgi.compatibility.state plugin iff 
-							the targeted Eclipse version (e.g., Luna) has it
-							(backwards compatible with kepler and previous versions) -->
-							<requirement>
-								<type>eclipse-feature</type>
-								<id>org.eclipse.rcp</id>
-								<versionRange>0.0.0</versionRange>
-							</requirement>
-							<requirement>
-								<type>eclipse-feature</type>
-								<id>org.eclipse.jdt</id>
-								<versionRange>0.0.0</versionRange>
-							</requirement>
-						</extraRequirements>
-					</dependency-resolution>
-				</configuration>
-			</plugin>
+
 		</plugins>
 	</build>
 </project>
