--- a/jbase.ui.examples/build.xml
+++ b/jbase.ui.examples/build.xml
@@ -38,8 +38,10 @@
 		<zip_example name="jbase.example.jbasescript.tests" />
 		<zip_example name="jbase.example.jbasescript.ui.tests" />
 		<zip_example2 name="org.eclipse.xtext.example.domainmodel" />
+		<zip_example2 name="org.eclipse.xtext.example.domainmodel.ide" />
 		<zip_example2 name="org.eclipse.xtext.example.domainmodel.ui" />
 		<zip_example2 name="org.eclipse.xtext.example.domainmodel.tests" />
+		<zip_example2 name="org.eclipse.xtext.example.domainmodel.ui.tests" />
 	</target>
 
 	<target name="clean">
