--- a/jbase.tests.parent/pom.xml
+++ b/jbase.tests.parent/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
@@ -15,61 +16,23 @@
   <packaging>pom</packaging>
 
   <properties>
-    <jacoco-version>0.8.6</jacoco-version>
     <additionalTestArgLine>${moduleProperties}</additionalTestArgLine>
-    <!-- To enable JUnit test collection, sonarqube analysis must
-      be enabled. -->
+    <!-- To enable JUnit test collection, sonarqube analysis must be enabled. -->
     <sonar.skip>false</sonar.skip>
   </properties>
 
   <profiles>
     <profile>
       <id>jacoco-report</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
       <properties>
         <additionalTestArgLine>${tycho.testArgLine} ${moduleProperties}</additionalTestArgLine>
       </properties>
       <build>
         <plugins>
           <plugin>
+            <!-- configured in <pluginManagement> -->
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>${jacoco-version}</version>
-            <executions>
-              <execution>
-                <goals>
-                  <!-- binds by default to the phase "initialize" -->
-                  <goal>prepare-agent</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <excludes>
-                <exclude>**/org/eclipse/**/*.class</exclude>
-                <exclude>**/antlr/**/*.class</exclude>
-                <exclude>**Abstract*RuntimeModule.class</exclude>
-                <exclude>**/*SetupGenerated*.class</exclude>
-                <exclude>**/Abstract*Validator.class</exclude>
-                <exclude>**/*GrammarAccess*.class</exclude>
-                <exclude>**/*UiModule.class</exclude>
-                <exclude>**/Abstract*ProposalProvider.class</exclude>
-                <exclude>**/*Test.class</exclude>
-                <exclude>**/*Internal*</exclude>
-                <exclude>**/*Sequencer*</exclude>
-                <exclude>**/internal/*</exclude>
-                <exclude>**/jbase/jbase/util/*</exclude>
-                <exclude>**/jbase/jbase/impl/*</exclude>
-                <exclude>**/*ExtensionFactory*</exclude>
-                <exclude>**/*LabelProvider*</exclude>
-                <exclude>**/*TreeProvider*</exclude>
-                <exclude>**/*RuntimeModule*</exclude>
-                <exclude>**/*StandaloneSetup*</exclude>
-                <exclude>**/*XbasePatchedFormatter*</exclude>
-                <exclude>**/ui/editor/*</exclude>
-              </excludes>
-            </configuration>
           </plugin>
         </plugins>
       </build>
