104: org.eclipse.rcp in ui.tests
Task-Url: https://github.com/LorenzoBettini/jbase/issues/104

--- a/jbase.ui.tests/pom.xml
+++ b/jbase.ui.tests/pom.xml
@@ -74,6 +74,15 @@
           <dependency-resolution>
             <extraRequirements
               combine.children="append">
+              <!--  Without this we get this failure:
+                org.eclipse.core.runtime.OperationCanceledException: Errors occurred during the build.
+                at jbase.ui.tests.JbaseWorkbenchTest.testErrorInGeneratedJavaCode(JbaseWorkbenchTest.xtend:60)
+               -->
+              <requirement>
+                <type>eclipse-feature</type>
+                <id>org.eclipse.rcp</id>
+                <versionRange>0.0.0</versionRange>
+              </requirement>
               <!-- See https://github.com/LorenzoBettini/jbase/issues/3
                 https://www.eclipse.org/forums/index.php/t/1073366/ -->
               <requirement>
