--- a/jbase.maven.releng/pom.xml
+++ b/jbase.maven.releng/pom.xml
@@ -1,76 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<relativePath>../jbase.parent/pom.xml</relativePath>
-		<groupId>net.sf.xtext-jbase</groupId>
-		<artifactId>jbase.parent</artifactId>
-		<version>0.10.0-SNAPSHOT</version>
-	</parent>
+  <parent>
+    <relativePath>../jbase.parent/pom.xml</relativePath>
+    <groupId>net.sf.xtext-jbase</groupId>
+    <artifactId>jbase.parent</artifactId>
+    <version>0.10.0-SNAPSHOT</version>
+  </parent>
 
-	<artifactId>jbase.maven.releng</artifactId>
-	<packaging>pom</packaging>
+  <artifactId>jbase.maven.releng</artifactId>
+  <packaging>pom</packaging>
 
-	<modules>
-		<module>../jbase.parent</module>
-		<module>../jbase.targetplatform</module>
-		<module>../jbase.mwe2</module>
-		<module>../jbase.lib</module>
-		<module>../jbase</module>
-	</modules>
+  <modules>
+    <module>../jbase.parent</module>
+    <module>../jbase.targetplatform</module>
+    <module>../jbase.mwe2</module>
+    <module>../jbase.lib</module>
+    <module>../jbase</module>
+  </modules>
 
-	<profiles>
-		<profile>
-			<!-- also installs in the local maven repo the jbasescript DSL for testing
-				the jbase.example.client.maven -->
-			<id>jbasescript</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
+  <profiles>
+    <profile>
+      <!-- also installs in the local maven repo the jbasescript DSL for 
+        testing the jbase.example.client.maven -->
+      <id>jbasescript</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
 
-			<modules>
-				<module>../jbase.example.jbasescript</module>
-			</modules>
-		</profile>
-		<profile>
-			<id>set-version-release</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
+      <modules>
+        <module>../jbase.example.jbasescript</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>set-version-release</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
 
-			<build>
-				<plugins>
-					<plugin>
-						<!-- 
-							This must be used explicitly with the goal set-version in order 
-							to update the versions removing the SNAPSHOT before deploying Maven artifacts:
-							
-							mvn org.apache.maven.plugins:maven-antrun-plugin:1.8:run -Dtycho.mode=maven -Pset-version-release
-						-->
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>${maven-antrun-plugin.version}</version>
-						<executions>
-							<execution>
-								<id>default-cli</id>
-								<phase>validate</phase>
-								<configuration>
-									<target>
-										<ant antfile="${ant-files-path}/increment_versions.ant"
-											target="set-version-release">
-										</ant>
-									</target>
-								</configuration>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+      <build>
+        <plugins>
+          <plugin>
+            <!-- This must be used explicitly with the goal set-version in 
+              order to update the versions removing the SNAPSHOT before deploying Maven 
+              artifacts: mvn antrun:run -Dtycho.mode=maven -Pset-version-release -->
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>${maven-antrun-plugin.version}</version>
+            <executions>
+              <execution>
+                <id>default-cli</id>
+                <phase>validate</phase>
+                <configuration>
+                  <target>
+                    <ant
+                      antfile="${ant-files-path}/increment_versions.ant"
+                      target="set-version-release">
+                    </ant>
+                  </target>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
