--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -70,13 +70,11 @@
     <!-- Sonar -->
     <!-- <sonar.junit.reportsPath>../${project.artifactId}.tests/target/surefire-reports/</sonar.junit.reportsPath> -->
 
-    <!-- Always refer to the corresponding tests project (if it exists) otherwise 
-      Sonarqube won't be able to collect code coverage. For example, when analyzing 
-      project foo it wouldn't find code coverage information if it doesn't use 
-      foo.tests jacoco.exec. -->
-    <sonar.jacoco.reportPaths>
-      ../${project.artifactId}.tests/target/jacoco.exec
-    </sonar.jacoco.reportPaths>
+    <jacoco-aggregate-report>jbase.tests.report/target/site/jacoco-aggregate/jacoco.xml</jacoco-aggregate-report>
+
+    <sonar.coverage.jacoco.xmlReportPaths>
+      ../${jacoco-aggregate-report}
+    </sonar.coverage.jacoco.xmlReportPaths>
 
     <!-- For this class code coverage information doesn't seem to be picked 
       correctly. -->
@@ -466,7 +464,7 @@
           <configuration>
             <jacocoReports>
               <!-- by default Jacoco generates its report here -->
-              <jacocoReport>${project.basedir}/../jbase.tests.report/target/site/jacoco-aggregate/jacoco.xml</jacocoReport>
+              <jacocoReport>${sonar.coverage.jacoco.xmlReportPaths}</jacocoReport>
             </jacocoReports>
           </configuration>
           <dependencies>
