--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -77,9 +77,12 @@
     </sonar.coverage.jacoco.xmlReportPaths>
 
     <!-- For this class code coverage information doesn't seem to be picked 
-      correctly. -->
+      correctly.
+      Exclude Xtend generated files from code coverage:
+      we cover the original Xtend files, using xtendAsPrimaryDebugSource -->
     <sonar.coverage.exclusions>
-      **/JbaseIssueCodes.java
+      **/JbaseIssueCodes.java,
+      **/xtend-gen/**/*.java,
     </sonar.coverage.exclusions>
 
     <!-- By default we exclude all projects from Sonarqube analysis,
@@ -109,6 +112,9 @@
       **/*TreeProvider.*,
       **/*XbasePatchedFormatter.*
     </sonar.exclusions>
+
+    <!-- To make SonarQube detect JUnit tests in generated Java code from Xtend -->
+    <sonar.scm.exclusions.disabled>true</sonar.scm.exclusions.disabled>
 
     <!-- see http://sonarqube.15.x6.nabble.com/sonar-issue-ignore-multicriteria-td5021722.html 
       and http://stackoverflow.com/questions/21825469/configure-sonar-sonar-issue-ignore-multicriteria-through-maven 
