--- a/jbase.parent/pom.xml
+++ b/jbase.parent/pom.xml
@@ -123,19 +123,19 @@
 
     <!-- standard convention for method names: in the outline tree provider 
       we must use methods that start with _ and they'd violate the rule squid:S00100 -->
-    <sonar.issue.ignore.multicriteria.e11.ruleKey>squid:S00100</sonar.issue.ignore.multicriteria.e11.ruleKey>
+    <sonar.issue.ignore.multicriteria.e11.ruleKey>java:S100</sonar.issue.ignore.multicriteria.e11.ruleKey>
     <sonar.issue.ignore.multicriteria.e11.resourceKey>**/*OutlineTreeProvider.java</sonar.issue.ignore.multicriteria.e11.resourceKey>
 
-    <sonar.issue.ignore.multicriteria.e12.ruleKey>squid:S00100</sonar.issue.ignore.multicriteria.e12.ruleKey>
+    <sonar.issue.ignore.multicriteria.e12.ruleKey>java:S100</sonar.issue.ignore.multicriteria.e12.ruleKey>
     <sonar.issue.ignore.multicriteria.e12.resourceKey>**/*AbstractXbaseProposalProvider.java</sonar.issue.ignore.multicriteria.e12.resourceKey>
 
-    <sonar.issue.ignore.multicriteria.e13.ruleKey>squid:S00100</sonar.issue.ignore.multicriteria.e13.ruleKey>
+    <sonar.issue.ignore.multicriteria.e13.ruleKey>java:S100</sonar.issue.ignore.multicriteria.e13.ruleKey>
     <sonar.issue.ignore.multicriteria.e13.resourceKey>**/*XbaseCompiler.java</sonar.issue.ignore.multicriteria.e13.resourceKey>
 
-    <sonar.issue.ignore.multicriteria.e14.ruleKey>squid:S00100</sonar.issue.ignore.multicriteria.e14.ruleKey>
+    <sonar.issue.ignore.multicriteria.e14.ruleKey>java:S100</sonar.issue.ignore.multicriteria.e14.ruleKey>
     <sonar.issue.ignore.multicriteria.e14.resourceKey>**/*ValueConverterService.java</sonar.issue.ignore.multicriteria.e14.resourceKey>
 
-    <sonar.issue.ignore.multicriteria.e15.ruleKey>squid:S00100</sonar.issue.ignore.multicriteria.e15.ruleKey>
+    <sonar.issue.ignore.multicriteria.e15.ruleKey>java:S100</sonar.issue.ignore.multicriteria.e15.ruleKey>
     <sonar.issue.ignore.multicriteria.e15.resourceKey>**/*TypeComputer.java</sonar.issue.ignore.multicriteria.e15.resourceKey>
 
     <!-- "Tabulation characters should not be used" sorry... I don't agree 
