--- a/jbase.tests.report/pom.xml
+++ b/jbase.tests.report/pom.xml
@@ -16,7 +16,7 @@
 
   <profiles>
     <profile>
-      <id>jacoco-report</id>
+      <id>jacoco</id>
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
